<resources>
    <string name="app_name">PM</string>
    <string name="app_name_test">测试版</string>
    <string name="launcher">PM桌面</string>
    <string name="sample_device_admin_description">申请管理者权限</string>
    <string name="sample_device_admin">静默安装</string>


    <!-- SHARED PREF KEYS -->
    <string name="shared_pref_package">org.wso2.emm.agent</string>
    <string name="shared_pref_policy">policy</string>
    <string name="shared_pref_configuration">configuration</string>
    <string name="shared_pref_notifier">notifierType</string>
    <string name="shared_pref_frequency">notifierFrequency</string>
    <string name="shared_pref_gcm">gcmSenderId</string>
    <string name="shared_pref_config_key">name</string>
    <string name="shared_pref_config_value">value</string>
    <string name="shared_pref_policy_applied">policy_applied</string>
    <string name="shared_pref_isagreed">isAgreed</string>
    <string name="shared_pref_registered">registered</string>
    <string name="shared_pref_ip">ip</string>
    <string name="shared_pref_eula">eula</string>
    <string name="shared_pref_regId">regId</string>
    <string name="shared_pref_username">username</string>
    <string name="shared_pref_pin">pin</string>
    <string name="shared_pref_command">command</string>
    <string name="shared_pref_reg_success">1</string>
    <string name="shared_pref_reg_fail">0</string>
    <string name="shared_pref_reg_type">deviceType</string>
    <string name="shared_pref_sender_id">senderID</string>
    <string name="shared_pref_message_mode">mode</string>
    <string name="shared_pref_interval">interval</string>
    <string name="username">username</string>
    <string name="shared_pref_device_active">deviceActive</string>
    <string name="shared_pref_client_id">clientId</string>
    <string name="shared_pref_client_secret">clientSecret</string>
    <string name="shared_pref_operators">operators</string>
    <string name="shared_pref_default_array">[]</string>
    <string name="shared_pref_default_string"></string>
    <string name="shared_pref_default_status">true</string>
    <string name="shared_pref_false_status">false</string>
    <string name="title_activity_login">AMLogin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_address">server address</string>
    <string name="password">Password</string>
    <string name="loginout">loginOut</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login">login</string>

</resources>
